--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -4,6 +4,7 @@
   <div class="container">
     <h1>'Allo, 'Allo!</h1>
     <p class="lead">Kick-start your next web app with Angular Fullstack</p>
+    <p class="lead">Ryan Made this change</p>
     <img src="assets/images/yeoman.png" alt="I'm Yeoman">
   </div>
 </header>
