--- a/client/app/alphabet/alphabet.html
+++ b/client/app/alphabet/alphabet.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<div ng-include="'components/navbar/navbar.html'"></div>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>List of Students--Alphabetically</title>
 </head>
 <body>
 
