made specified changes from website. started to add some testing.

--- a/client/app/dob/dob.html
+++ b/client/app/dob/dob.html
@@ -1,11 +1,8 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<hr>
+<div class="container">
 
-</body>
-</html>
+
+
+</div>
