--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
       <!-- injector:css -->
       <link rel="stylesheet" href="app/account/login/login.css">
       <link rel="stylesheet" href="app/admin/admin.css">
+      <link rel="stylesheet" href="app/alphabet/alphabet.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/dob/dob.css">
       <link rel="stylesheet" href="app/main/main.css">
@@ -76,6 +77,10 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/alphabet/alphabet.controller.js"></script>
+          <script src="app/alphabet/alphabet.js"></script>
+          <script src="app/dob/dob.controller.js"></script>
+          <script src="app/dob/dob.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="components/auth/auth.service.js"></script>
