--- a/client/app/alphabet/alphabet.html
+++ b/client/app/alphabet/alphabet.html
@@ -1,10 +1,25 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+
 <html>
 <head lang="en">
     <meta charset="UTF-8">
     <title>List of Students--Alphabetically</title>
 </head>
 <body>
+<h1>Hello! Can you see me?</h1>
+<div ng-include="'/client/components/navbar/navbar.html'"></div>
+<hr>
+<div class="AlphaCtrl">
+  <ul>
+    <li>
+      <form ng-submit="sortByFullName()">
 
+        <input type="submit" value="Sort by full name" class="btn btn-primary">
+
+      </form>
+    </li>
+
+    <li ng-repeat="test in sortedFullName">{{test.name}}</li>
+  </ul>
+  </div>
 </body>
 </html>
