added console check

--- a/client/app/alphabet/alphabet.html
+++ b/client/app/alphabet/alphabet.html
@@ -18,7 +18,7 @@
       </form>
     </li>
 
-    <li ng-repeat="test in sortedFullName">{{test.name}}</li>
+    <li ng-repeat="test in sortedFullName">{{sortByFullName()}}</li>
   </ul>
   </div>
 </body>
