removed test added Ng-repeat

--- a/client/app/dob/dob.html
+++ b/client/app/dob/dob.html
@@ -2,7 +2,7 @@
 
 <hr>
 <div class="container">
-
+  <li class="list-group-item" ng-repeat="thing in studentInfo">{{thing.dateOfBirth}}</li>
 
 
 </div>
