--- a/client/index.html
+++ b/client/index.html
@@ -78,8 +78,8 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
-          <script src="app/alphabet/alphabet.controller.js"></script>
-          <script src="app/alphabet/alphabet.js"></script>
+          <script src="app/dob/dob.controller.js"></script>
+          <script src="app/dob/dob.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/sortFullName/sortFullName.controller.js"></script>
