trying to post the sorted name in html page

--- a/client/app/sortFullName/sortFullName.html
+++ b/client/app/sortFullName/sortFullName.html
@@ -7,9 +7,8 @@
       <input type="submit" value="Sort by full name" class="btn btn-primary">
 
       </form>
-      <span>{{sortByFullName()}}</span>
     </li>
 
-    <!--<li ng-repeat="test in sortedFullName">{{sortByFullName()}}</li>-->
+    <li ng-repeat="test in sortedFullName">{{sortByFullName()}}</li>
   </ul>
 </div>
