DOB page now has working sort by date of birth display

--- a/client/app/dob/dob.html
+++ b/client/app/dob/dob.html
@@ -1,7 +1,56 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+
 
 
 <div class="col-md-12">
 <option value="{{}}" ng-repeat="student in studentsInfo | orderBy:'dateOfBirth'"> {{student.dateOfBirth}} - {{student.lastName}}, {{student.firstName}}</option>
 </div>
 
+<div ng-include="'components/navbar/navbar.html'"></div>
+
+  <ul>
+    <button ng-click="displayLastNames()">Sort by Last Name</button>
+    <button ng-click="displayFirstNames()">Sort by First Name</button>
+    <button ng-click="displayDOB()">Sort by Date of Birth</button>
+    <table ng-hide="myVar" border="1" style="width:45%">
+      <tr>
+        <th>Last Name</th>
+        <th>First Name</th>
+        <th>Date of Birth</th>
+      </tr>
+      <tr ng-repeat="student in studentsInfo | orderBy : 'lastName'">
+        <td>{{ student.lastName}}</td>
+        <td>{{ student.firstName }}</td>
+        <td>{{ student.dateOfBirth }}</td>
+      </tr>
+    </table>
+
+
+    <table ng-hide="myVar2" border="1" style="width:45%">
+      <tr>
+        <th>Last Name</th>
+        <th>First Name</th>
+        <th>Date of Birth</th>
+      </tr>
+      <tr ng-repeat="student in studentsInfo | orderBy : 'firstName'">
+        <td>{{ student.lastName }}</td>
+        <td>{{ student.firstName}}</td>
+        <td>{{ student.dateOfBirth }}</td>
+      </tr>
+    </table>
+
+    <table ng-hide="hideDOB" border="1" style="width:45%">
+      <tr>
+        <th>Last Name</th>
+        <th>First Name</th>
+        <th>Date of Birth</th>
+      </tr>
+      <tr ng-repeat="student in studentsInfo | orderBy : 'dateOfBirth'">
+        <td>{{ student.lastName }}</td>
+        <td>{{ student.firstName}}</td>
+        <td>{{ student.dateOfBirth }}</td>
+      </tr>
+    </table>
+
+  </ul>
+
+</div>
