--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/dob/dob.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/sortByMajor/sortByMajor.css">
       <link rel="stylesheet" href="app/sortFullName/sortFullName.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
@@ -81,6 +82,8 @@
           <script src="app/dob/dob.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/sortByMajor/sortByMajor.controller.js"></script>
+          <script src="app/sortByMajor/sortByMajor.js"></script>
           <script src="app/sortFullName/sortFullName.controller.js"></script>
           <script src="app/sortFullName/sortFullName.js"></script>
           <script src="components/auth/auth.service.js"></script>
