Was able to display Major after moving (refer changes log)

--- a/client/app/sortFullName/sortFullName.html
+++ b/client/app/sortFullName/sortFullName.html
@@ -12,6 +12,8 @@
       <tr ng-repeat="student in studentsInfo | orderBy : 'lastName'">
         <td>{{ student.lastName}}</td>
         <td>{{ student.firstName }}</td>
+        <td>{{student.major1}}</td>
+        <td>{{student.major2}}</td>
       </tr>
     </table>
 
