--- a/client/app/dob/dob.html
+++ b/client/app/dob/dob.html
@@ -1,10 +1,10 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
   <ul>
-    <button ng-click="displayLastNames()">Sort by Last Name</button>
-    <button ng-click="displayFirstNames()">Sort by First Name</button>
+    <button ng-click="displayLastNameTable()">Sort by Last Name</button>
+    <button ng-click="displayFirstNameTable()">Sort by First Name</button>
     <button ng-click="displayDOB()">Sort by Date of Birth</button>
-    <table ng-hide="myVar" border="1" style="width:45%">
+    <table ng-hide="lastNameSort" border="1" style="width:45%">
       <tr>
         <th>Last Name</th>
         <th>First Name</th>
