Now showing student credits in table, it is still counting the IP courses, and is not sorted by credits.

--- a/client/app/dob/dob.html
+++ b/client/app/dob/dob.html
@@ -62,7 +62,7 @@
         <td>{{ student.lastName }}</td>
         <td>{{ student.firstName}}</td>
         <td>{{ student.dateOfBirth }}</td>
-        <td>{{ totalCredits()}}</td>
+        <td>{{ totalCredits(student) }}</td>
       </tr>
     </table>
 
