--- a/client/app/dob/dob.html
+++ b/client/app/dob/dob.html
@@ -5,18 +5,22 @@
     <button ng-click="displayFirstNames()">Sort by First Name</button>
     <button ng-click="displayDOB()">Sort by Date of Birth</button>
     <button ng-click="displayCreditsCompleted()">Sort by Credits Completed</button>
+    <button ng-click="displayGPA()">Sort by GPA</button>
     <table ng-hide="myVar" border="1" style="width:45%">
       <tr>
         <th>Last Name</th>
         <th>First Name</th>
         <th>Date of Birth</th>
         <th>Credits</th>
+        <th>GPA</th>
+
       </tr>
       <tr ng-repeat="student in studentsInfo | orderBy : 'lastName'">
         <td>{{ student.lastName}}</td>
         <td>{{ student.firstName }}</td>
         <td>{{ student.dateOfBirth }}</td>
-        <td>{{ student.credits }}</td>
+        <td>{{ totalCredits(student) }}</td>
+        <td>{{GPA(student)}}</td>
       </tr>
     </table>
 
@@ -27,12 +31,15 @@
         <th>First Name</th>
         <th>Date of Birth</th>
         <th>Credits</th>
+        <th>GPA</th>
+
       </tr>
       <tr ng-repeat="student in studentsInfo | orderBy : 'firstName'">
         <td>{{ student.lastName }}</td>
         <td>{{ student.firstName}}</td>
         <td>{{ student.dateOfBirth }}</td>
-        <td>{{ student.credits }}</td>
+        <td>{{ totalCredits(student) }}</td>
+        <td>{{GPA(student)}}</td>
       </tr>
     </table>
 
@@ -42,12 +49,15 @@
         <th>First Name</th>
         <th>Date of Birth</th>
         <th>Credits</th>
+        <th>GPA</th>
+
       </tr>
       <tr ng-repeat="student in studentsInfo | orderBy : 'dateOfBirth'">
         <td>{{ student.lastName }}</td>
         <td>{{ student.firstName}}</td>
         <td>{{ student.dateOfBirth }}</td>
-        <td>{{ student.credits }}</td>
+        <td>{{ totalCredits(student) }}</td>
+        <td>{{GPA(student)}}</td>
       </tr>
     </table>
 
@@ -57,12 +67,31 @@
         <th>First Name</th>
         <th>Date of Birth</th>
         <th>Credits</th>
+        <th>GPA</th>
       </tr>
       <tr ng-repeat="student in studentsInfo | orderBy : 'dateOfBirth'">
         <td>{{ student.lastName }}</td>
         <td>{{ student.firstName}}</td>
         <td>{{ student.dateOfBirth }}</td>
         <td>{{ totalCredits(student) }}</td>
+        <td>{{GPA(student)}}</td>
+      </tr>
+    </table>
+
+    <table ng-hide="gpaBool" border="1" style="width:45%">
+      <tr>
+        <th>Last Name</th>
+        <th>First Name</th>
+        <th>Date of Birth</th>
+        <th>Credits</th>
+        <th>GPA</th>
+      </tr>
+      <tr ng-repeat="student in studentsInfo | orderBy : 'dateOfBirth'">
+        <td>{{ student.lastName }}</td>
+        <td>{{ student.firstName}}</td>
+        <td>{{ student.dateOfBirth }}</td>
+        <td>{{ totalCredits(student) }}</td>
+        <td>{{GPA(student)}}</td>
       </tr>
     </table>
 
