--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,7 @@
       <link rel="stylesheet" href="app/dob/dob.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/sortFullName/sortFullName.css">
+      <link rel="stylesheet" href="app/specificStudentInfo/specificStudentInfo.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
@@ -83,6 +84,8 @@
           <script src="app/main/main.js"></script>
           <script src="app/sortFullName/sortFullName.controller.js"></script>
           <script src="app/sortFullName/sortFullName.js"></script>
+          <script src="app/specificStudentInfo/specificStudentInfo.controller.js"></script>
+          <script src="app/specificStudentInfo/specificStudentInfo.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
