List of courses with grade a student has taken now displaying in a better looking form, would still be nice to get it into a table though.

--- a/client/app/specificStudentInfo/specificStudentInfo.html
+++ b/client/app/specificStudentInfo/specificStudentInfo.html
@@ -14,6 +14,7 @@
     <div data-ng-bind="selected">    </div>
     <div data-ng-bind="allCourses">    </div>
 
+  <p id="coursesInfo"></p>
 
 
 </div>
