--- a/client/app/sortFullName/sortFullName.html
+++ b/client/app/sortFullName/sortFullName.html
@@ -1,65 +1,11 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 <div class = "SortFullNameCtrl">
-
-  <ul>
-    <button ng-click="displayLastNameTable()">Sort by Last Name</button>
-    <button ng-click="displayFirstNameTable()">Sort by First Name</button>
-    <button ng-click="displayMajorTable()">Sort by Majors</button>
-
-     <table ng-hide="lastNameSort" border="1" style="width:45%">
-       <tr>
-         <th>Last Name</th>
-         <th>First Name</th>
-       </tr>
-      <tr ng-repeat="student in studentsInfo | orderBy : 'lastName'">
-        <td>{{ student.lastName}}</td>
-        <td>{{ student.firstName }}</td>
-        </tr>
-    </table>
-
-
-    <table ng-hide="firstNameSort" border="1" style="width:45%">
-       <tr>
-         <th>First Name</th>
-         <th>Last Name</th>
-       </tr>
-       <tr ng-repeat="student in studentsInfo | orderBy : 'firstName'">
-         <td>{{ student.firstName}}</td>
-         <td>{{ student.lastName }}</td>
-       </tr>
-    </table>
-
-    <!--<form action="{{displayMajorTable()}}">-->
-      <!--<select major="major">-->
-        <!--<option>Choose Major</option>-->
-        <!--<option value="csci">CSCI</option>-->
-        <!--<option value="English">English</option>-->
-        <!--<option value="French">French</option>-->
-        <!--<option value="Math">Math</option>-->
-        <!--<option value="Poly Sci">Poly Sci</option>-->
-        <!--<option value="Studio Art">Studio Art</option>-->
-      <!--</select>-->
-      <!--<br><br>-->
-      <!--<input type="submit">-->
-    <!--</form>-->
-
-    <table ng-hide="majorSort" border="1" style="width:45%">
-
-      <tr>
-        <th>Major 1</th>
-        <th>Major 2</th>
-        <th>Students' Full Name</th>
-
-      </tr>
-      <tr ng-repeat="student in studentsInfo | orderBy : 'major1' ">
-        <td>{{student.major1}}</td>
-        <td>{{student.major2}}</td>
-        <td>{{student.firstName }}, {{student.lastName}}</td>
-      </tr>
-
-    </table>
-
-  </ul>
+    Search Students: <input ng-model="searchText">
+    Search Classes: <input ng-model="searchText1">
+    <div ng-repeat-start="student in studentsInfo | filter:searchText">{{student.lastName}}, {{student.firstName}}</div>
+    <div ng-repeat="course in student.courses | filter:searchText1"> -{{course.course.name}} = {{course.grade}}</div>
+    <br>
+    <div ng-repeat-end></div>
 
 </div>
 
